--- a/core/src/main/res/values/strings.xml
+++ b/core/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">MVI Coroutines Flow</string>
+    <string name="app_name">Compose MVI Coroutines Flow</string>
 </resources>
