done users list

--- a/feature-main/src/main/res/values/strings.xml
+++ b/feature-main/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
 <resources>
   <string name="add_user">Add user</string>
   <string name="delete">Delete</string>
+  <string name="delete_user_confirmaion">Do you want to delete "%s"? This action cannot be undone.</string>
 </resources>
